# WATI-Frappe-Integration

./: hooks.py  license.txt  pyproject.toml
github_wati/wati_integration/: pyproject.toml
github_wati/wati_integration/wati_integration/wati_integration/doctype/message_template/: message_template.json  message_template.py
github_wati/wati_integration/wati_integration/wati_integration/doctype/send_wati_message/: send_wati_message.json  send_wati_message.py
github_wati/wati_integration/wati_integration/wati_integration/doctype/template_variable/: template_variable.json
github_wati/wati_integration/wati_integration/wati_integration/doctype/wati_group/: test_wati_group.py  wati_group.json  wati_group.py
github_wati/wati_integration/wati_integration/wati_integration/doctype/wati_group_details/: wati_group_details.json
github_wati/wati_integration/wati_integration/wati_integration/doctype/wati_message_log/: wati_message_log.js
github_wati/wati_integration/wati_integration/wati_integration/doctype/wati_message_rule/: wati_message_rule.js  wati_message_rule.json  wati_message_rule.py
github_wati/wati_integration/wati_integration/wati_integration/doctype/wati_setting/: wati_setting.json
github_wati/wati_integration/wati_integration/wati_integration/workspace/wati_integration/: wati_integration.json
public/js/: wati.js
wati_integration/: README.md  modules.txt  pyproject.toml
wati_integration 3/: MANIFEST.in  README.md
wati_integration 3/wati_integration/: hooks.py
wati_integration/doctype/message_template/: message_template.py
wati_integration/doctype/wati_group/: wati_group.js  wati_group.py
wati_integration/doctype/wati_group_details/: wati_group_details.py
wati_integration/doctype/wati_message_rule/: wati_message_rule.json  wati_message_rule.py
wati_integration/doctype/wati_setting/: wati_setting.js
wati_integration/wati_integration/doctype/wati_setting/: wati_setting.py
(+32 files in other folders)
