[project]
name = "wati_integration"
authors = [
    { name = "Yasir Shaikh", email = "drmohammeddanishshaikh@gmail.com" },
]
description = "Frappe app to send WhatsApp messages via WATI"
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench, do NOT add here.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wati_integration"

# Frappe version this app supports (read by bench and Frappe Cloud).
# Covers v15 and v16.
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

# APT packages installed automatically when hosted on Frappe Cloud
[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
