[project]
name = "wati_integration"
version = "1.0.0"
description = "Frappe app to send WhatsApp messages via WATI"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yasir Shaikh", email = "drmohammeddanishshaikh@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "frappe",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wati_integration"
